# openai-agents-dashboard

./: .gitignore  README.md  podman-compose.yml
agents-api/: .env  .pylintrc  Containerfile.dev  alembic.ini  pyproject.toml
agents-api/alembic/versions/: 001_add_model_providers.py
agents-api/app/: main.py
agents-api/app/api/v1/: router.py
agents-api/app/api/v1/endpoints/: model_providers.py
agents-api/app/models/: model_provider.py
agents-api/app/repositories/: model_provider_repository.py
agents-api/app/schemas/: model_provider.py
agents-api/app/services/: model_provider_service.py
agents-api/tests/: conftest.py  test_health.py
agents-ui/: Containerfile.dev  index.html  package.json  pnpm-lock.yaml
agents-ui/src/: App.tsx  theme.ts
agents-ui/src/components/common/: ErrorMessage.tsx  JSONEditor.tsx  LoadingSpinner.tsx
agents-ui/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
agents-ui/src/components/model-providers/: ModelForm.tsx  (+3 more)
agents-ui/src/pages/: HomePage.tsx  ModelProviderDetailPage.tsx  ModelProvidersPage.tsx  NotFoundPage.tsx
agents-ui/src/services/: api.ts  modelProviderService.ts  modelService.ts
agents-ui/src/types/: modelProvider.ts
docs/: SUMMARY.md
docs/api/: README.md  implementation-guide.md
docs/architecture/: README.md
docs/guides/: README.md  creating-prds.md  development-setup.md  podman-deployment.md
docs/prds/: agent-management.md
docs/reference/: README.md
docs/ui/: README.md  agent-editor.md  execution-console.md  implementation-guide.md  trace-viewer.md  workflow-designer.md
(+1 files in other folders)
