[tool.poetry]
name = "agents-api"
version = "0.1.0"
description = "API for OpenAI Agents UI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"
pydantic = "^2.11.3"
python-jose = "^3.4.0"
python-multipart = "^0.0.20"
redis = "^5.2.1"
openai = "^1.75.0"
litellm = "^1.67.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"